--- a/wg-go.xcframework/Info.plist
+++ b/wg-go.xcframework/Info.plist
@@ -8,7 +8,7 @@
 			<key>BinaryPath</key>
 			<string>libwg-go.a</string>
 			<key>HeadersPath</key>
-			<string>Headers</string>
+			<string>Headers2</string>
 			<key>LibraryIdentifier</key>
 			<string>tvos-arm64</string>
 			<key>LibraryPath</key>
@@ -24,24 +24,41 @@
 			<key>BinaryPath</key>
 			<string>libwg-go.a</string>
 			<key>HeadersPath</key>
-			<string>Headers</string>
+			<string>Headers2</string>
 			<key>LibraryIdentifier</key>
-			<string>macos-arm64_x86_64</string>
+			<string>ios-arm64</string>
 			<key>LibraryPath</key>
 			<string>libwg-go.a</string>
 			<key>SupportedArchitectures</key>
 			<array>
 				<string>arm64</string>
-				<string>x86_64</string>
 			</array>
 			<key>SupportedPlatform</key>
-			<string>macos</string>
+			<string>ios</string>
 		</dict>
 		<dict>
 			<key>BinaryPath</key>
 			<string>libwg-go.a</string>
 			<key>HeadersPath</key>
-			<string>Headers</string>
+			<string>Headers2</string>
+			<key>LibraryIdentifier</key>
+			<string>tvos-arm64-simulator</string>
+			<key>LibraryPath</key>
+			<string>libwg-go.a</string>
+			<key>SupportedArchitectures</key>
+			<array>
+				<string>arm64</string>
+			</array>
+			<key>SupportedPlatform</key>
+			<string>tvos</string>
+			<key>SupportedPlatformVariant</key>
+			<string>simulator</string>
+		</dict>
+		<dict>
+			<key>BinaryPath</key>
+			<string>libwg-go.a</string>
+			<key>HeadersPath</key>
+			<string>Headers2</string>
 			<key>LibraryIdentifier</key>
 			<string>ios-arm64-simulator</string>
 			<key>LibraryPath</key>
@@ -59,35 +76,18 @@
 			<key>BinaryPath</key>
 			<string>libwg-go.a</string>
 			<key>HeadersPath</key>
-			<string>Headers</string>
+			<string>Headers2</string>
 			<key>LibraryIdentifier</key>
-			<string>ios-arm64</string>
+			<string>macos-arm64_x86_64</string>
 			<key>LibraryPath</key>
 			<string>libwg-go.a</string>
 			<key>SupportedArchitectures</key>
 			<array>
 				<string>arm64</string>
+				<string>x86_64</string>
 			</array>
 			<key>SupportedPlatform</key>
-			<string>ios</string>
-		</dict>
-		<dict>
-			<key>BinaryPath</key>
-			<string>libwg-go.a</string>
-			<key>HeadersPath</key>
-			<string>Headers</string>
-			<key>LibraryIdentifier</key>
-			<string>tvos-arm64-simulator</string>
-			<key>LibraryPath</key>
-			<string>libwg-go.a</string>
-			<key>SupportedArchitectures</key>
-			<array>
-				<string>arm64</string>
-			</array>
-			<key>SupportedPlatform</key>
-			<string>tvos</string>
-			<key>SupportedPlatformVariant</key>
-			<string>simulator</string>
+			<string>macos</string>
 		</dict>
 	</array>
 	<key>CFBundlePackageType</key>
